# herdr-git-status

./: .gitignore  Cargo.toml  README.md  herdr-plugin.toml
src/: collect.rs  config.rs  daemon.rs  git.rs  herdr.rs  main.rs  model.rs  render.rs
